--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <head>
         <title>Home</title>
         <!-- The heading and introduction to the page. -->
+        <h1>hello and welcome to my website</h1>
+        <h2>feel free to click on buttons</h2>
     </head>
-    <body>
-
-    </body>
+    <body></body>
 </html>
