--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <head>
         <title>Home</title>
         <!-- The heading and introduction to the page. -->
-        <h1>hello and welcome to my website</h1>
-        <h2>feel free to click on buttons</h2>
+        <h1>Hello and welcome to my website!</h1>
+        <h2>Feel free to click on buttons.</h2>
+        <h6><b>Shea McGuire</b> | sheamcguire@u.boisestate.edu</h6>
     </head>
     <body></body>
 </html>
