--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
         <!-- The heading and introduction to the page. -->
         <h1>Hello and welcome to my website!</h1>
         <h2>Feel free to click on buttons.</h2>
-        <h6><b>Shea McGuire</b> | sheamcguire@u.boisestate.edu</h6>
+        <h5><b>Shea McGuire</b> | sheamcguire@u.boisestate.edu | <button>Click!</button></h5>
     </head>
-    <body></body>
+    <!-- This is where the contents of the website start. -->
+    <body>
+        <p></p>
+    </body>
 </html>
