Image of a cat on a chair was added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     </head>
     <!-- This is where the contents of the website start. -->
     <body>
-        <p></p>
+        <p>
+            Hello! My name is Shea McGuire and I am a Media Arts major working on my Bachelors at Boise State University. I have an Associates of the Arts degree from Idaho State University.
+        </p>
+        <br>
+        <img src="catonchair.jpg" alt="Me gaming with my cute cat Bandit.">
     </body>
 </html>
