Idk what to put here

--- a/index.html
+++ b/index.html
@@ -4,16 +4,21 @@
     <head>
         <title>Home</title>
         <!-- The heading and introduction to the page. -->
-        <h1>Hello and welcome to my website!</h1>
-        <h2>Feel free to click on buttons.</h2>
-        <h5><b>Shea McGuire</b> | sheamcguire@u.boisestate.edu | <button>Click!</button></h5>
+        
     </head>
     <!-- This is where the contents of the website start. -->
     <body>
+        <h1>Hello and welcome to my website!</h1>
+        <h2>Feel free to click on buttons.</h2>
+        <h5><b>Shea McGuire</b> | sheamcguire@u.boisestate.edu | <button>Click!</button></h5>
         <p>
             Hello! My name is Shea McGuire and I am a Media Arts major working on my Bachelors at Boise State University. I have an Associates of the Arts degree from Idaho State University.
         </p>
         <br>
-        <img src="catonchair.jpg" alt="Me gaming with my cute cat Bandit.">
+        <img src="catonchair.jpg" alt="Me gaming with my cute cat Bandit." width="50%" height="50%">
+        <br>
+        <p>
+            Since I an required to put audio on this page, here is a song I made forever ago.
+        </p>
     </body>
 </html>
