--- a/index.html
+++ b/index.html
@@ -15,10 +15,13 @@
             Hello! My name is Shea McGuire and I am a Media Arts major working on my Bachelors at Boise State University. I have an Associates of the Arts degree from Idaho State University.
         </p>
         <br>
-        <img src="catonchair.jpg" alt="Me gaming with my cute cat Bandit." width="50%" height="50%">
-        <br>
+        <img src="catonchair.jpg" alt="Me gaming with my cute cat Bandit." width="30%" height="30%"> <br>
         <p>
             Since I an required to put audio on this page, here is a song I made forever ago.
-        </p>
+        </p> <br>
+        <audio controls>
+            <source src="mightsong.mp3" type="audio/mp3">
+        </audio> <br>
+
     </body>
 </html>
