--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Home</title>
-        <!-- The heading and introduction to the page. -->
-        
+        <title>Shea McGuire</title>
     </head>
-    <!-- This is where the contents of the website start. -->
+    
     <body>
+        <!-- The heading and introduction to the page. -->
         <h1>Hello and welcome to my website!</h1>
         <h2>Feel free to click on buttons.</h2>
         <h5><b>Shea McGuire</b> | sheamcguire@u.boisestate.edu | <button>Click!</button></h5>
+        <!-- This is where the contents of the website start. -->
         <p>
-            Hello! My name is Shea McGuire and I am a Media Arts major working on my Bachelors at Boise State University. I have an Associates of the Arts degree from Idaho State University.
+            Hello! My name is Shea McGuire and I am a Media Arts major working on my Bachelors at <abbr>BSU</abbr>. I have an Associates of the Arts degree from <abbr>ISU</abbr>.
         </p>
         <br>
         <img src="catonchair.jpg" alt="Me gaming with my cute cat Bandit." width="30%" height="30%"> <br>
@@ -22,12 +22,27 @@
         <audio controls>
             <source src="mightsong.mp3" type="audio/mp3">
         </audio> <br>
-        <p>I want to make videos for a living some day, whether that be videography, editing, or, the best of the best, a content creator of some sort. Here is the greatest video I've made so far:</p> <br>
+        <p>I want to make videos for a living some day, whether that be videography, editing, or, <i>the best of the best</i>, a content creator of some sort. Here is the greatest video I've made so far:</p> <br>
         <figure>
             <video width="320" height="240">
                 <source src="feelslikethegdp.mp4" type="video/mp4">
             </video>
             <figcaption> <a href="https://www.youtube.com/watch?v=AT2G8SRGecE"> Link to the Video on Youtube </a> </figcaption>
-        </figure>
+        </figure> <br>
+        <p>
+            The things I think that I like the most in my room are: <ul>
+                <li>My cat.</li>
+                <li>My frickin awesome PC.</li>
+                <li>I've got a really cool minifridge that I keep yogurt in.</li>
+                <li>My bed is really high off the ground and really big which is quite nice.</li>
+            </ul>
+        </p>
+        <p>
+            My three favorite foods are: <ol>
+                <li>Tacos</li>
+                <li>Rice</li>
+                <li>Basically anything with cream cheese (crepes, cheesecake, etc.)</li>
+            </ol>
+        </p>
     </body>
 </html>
