--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <!-- The heading and introduction to the page. -->
         <h1>Hello and welcome to my website!</h1>
         <h2>Feel free to click on buttons.</h2>
-        <h5><b>Shea McGuire</b> | sheamcguire@u.boisestate.edu | <button>Click!</button></h5>
+        <h5><b>Shea McGuire</b> | <strong>sheamcguire@u.boisestate.edu</strong> | <button>Click!</button></h5>
         <!-- This is where the contents of the website start. -->
         <p>
             Hello! My name is Shea McGuire and I am a Media Arts major working on my Bachelors at <abbr>BSU</abbr>. I have an Associates of the Arts degree from <abbr>ISU</abbr>.
@@ -24,7 +24,7 @@
         </audio> <br>
         <p>I want to make videos for a living some day, whether that be videography, editing, or, <i>the best of the best</i>, a content creator of some sort. Here is the greatest video I've made so far:</p> <br>
         <figure>
-            <video width="320" height="240">
+            <video width="320" height="240" controls>
                 <source src="feelslikethegdp.mp4" type="video/mp4">
             </video>
             <figcaption> <a href="https://www.youtube.com/watch?v=AT2G8SRGecE"> Link to the Video on Youtube </a> </figcaption>
@@ -45,4 +45,8 @@
             </ol>
         </p>
     </body>
+    <footer>
+        <!-- Here is the footer to finalize my website. -->
+        <p> This website was made by me! ©Shea McGuire aka Timmy™</p>
+    </footer>
 </html>
