--- a/index.html
+++ b/index.html
@@ -47,6 +47,6 @@
     </body>
     <footer>
         <!-- Here is the footer to finalize my website. -->
-        <p> This website was made by me! ©Shea McGuire aka Timmy™</p>
+        <h6>This website was made by me! ©Shea McGuire aka Timmy™</h6>
     </footer>
 </html>
