3 new pages created for organization.

--- a/nested.html
+++ b/nested.html
@@ -1,13 +1,10 @@
-<!-- All the meta tags for use in GitHub. -->
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Shea McGuire</title>
+        <title>Nested</title>
     </head>
     <body>
-        <a href="tags.html">Tags</a>
-        <a href="nested.html">Nested</a>
-        <a href="media.html">Media</a>
+
     </body>
     <footer>
         <!-- Here is the footer to finalize my website. -->
