I have to make comments when I update anything other than index?

--- a/tags.html
+++ b/tags.html
@@ -12,7 +12,12 @@
         <p>
             Hello! My name is Shea McGuire and I am a Media Arts major working on my Bachelors at <abbr>BSU</abbr>. I have an Associates of the Arts degree from <abbr>ISU</abbr>.
         </p>
-        <p>I want to make videos for a living some day, whether that be videography, editing, or, <i>the best of the best</i>, a content creator of some sort. Here is the greatest video I've made so far:</p> <br>
+        <p>
+            I want to make videos for a living some day, whether that be videography, editing, or, <i>the best of the best</i>, a content creator of some sort. Here is the greatest video I've made so far:
+        </p> <br>
+        <p>
+            Since I an required to put audio on this page, here is a song I made forever ago.
+        </p> <br>
         <p>
             The things I think that I like the most in my room are: <ul>
                 <li>My cat.</li>
