Links on every page for page movement.

--- a/tags.html
+++ b/tags.html
@@ -8,6 +8,9 @@
         <h1>Hello and welcome to my website!</h1>
         <h2>Feel free to click on buttons.</h2>
         <h5><b>Shea McGuire</b> | <strong>sheamcguire@u.boisestate.edu</strong> | <button>Click!</button></h5>
+        <a href="tags.html">Tags</a>
+        <a href="nested.html">Nested</a>
+        <a href="media.html">Media</a>
         <!-- This is where the contents of the website start. -->
         <p>
             Hello! My name is Shea McGuire and I am a Media Arts major working on my Bachelors at <abbr>BSU</abbr>. I have an Associates of the Arts degree from <abbr>ISU</abbr>.
