--- a/media.html
+++ b/media.html
@@ -4,6 +4,9 @@
         <title>Media</title>
     </head>
     <body>
+        <a href="tags.html">Tags</a>
+        <a href="nested.html">Nested</a>
+        <a href="media.html">Media</a>
         <audio controls>
             <source src="mightsong.mp3" type="audio/mp3">
         </audio> <br>
