--- a/nested.html
+++ b/nested.html
@@ -4,6 +4,9 @@
         <title>Nested</title>
     </head>
     <body>
+        <a href="tags.html">Tags</a>
+        <a href="nested.html">Nested</a>
+        <a href="media.html">Media</a>
         
     </body>
     <footer>
