--- a/tags.html
+++ b/tags.html
@@ -4,38 +4,47 @@
         <title>Tags</title>
     </head>
     <body>
+        <style>
+            header {color:darkorchid;}
+            ul {color:red;}
+            ol {color:blue;}
+        </style>
         <!-- The heading and introduction to the page. -->
-        <h1>Hello and welcome to my website!</h1>
-        <h2>Feel free to click on buttons.</h2>
-        <h5><b>Shea McGuire</b> | <strong>sheamcguire@u.boisestate.edu</strong> | <button>Click!</button></h5>
-        <a href="tags.html">Tags</a>
-        <a href="nested.html">Nested</a>
-        <a href="media.html">Media</a>
-        <!-- This is where the contents of the website start. -->
-        <p>
-            Hello! My name is Shea McGuire and I am a Media Arts major working on my Bachelors at <abbr>BSU</abbr>. I have an Associates of the Arts degree from <abbr>ISU</abbr>.
-        </p>
-        <p>
-            I want to make videos for a living some day, whether that be videography, editing, or, <i>the best of the best</i>, a content creator of some sort. Here is the greatest video I've made so far:
-        </p> <br>
-        <p>
-            Since I an required to put audio on this page, here is a song I made forever ago.
-        </p> <br>
-        <p>
-            The things I think that I like the most in my room are: <ul>
-                <li>My cat.</li>
-                <li>My frickin awesome PC.</li>
-                <li>I've got a really cool minifridge that I keep yogurt in.</li>
-                <li>My bed is really high off the ground and really big which is quite nice.</li>
-            </ul>
-        </p>
-        <p>
-            My three favorite foods are: <ol>
-                <li>Tacos</li>
-                <li>Rice</li>
-                <li>Basically anything with cream cheese (crepes, cheesecake, etc.)</li>
-            </ol>
-        </p>
+        <header>
+            <h1>Hello and welcome to my website!</h1>
+            <h2>Feel free to click on buttons.</h2>
+            <h5><b>Shea McGuire</b> | <strong>sheamcguire@u.boisestate.edu</strong> | <button>Click!</button></h5>
+            <a href="tags.html">Tags</a>
+            <a href="nested.html">Nested</a>
+            <a href="media.html">Media</a>
+        </header>
+        <div>
+            <!-- This is where the contents of the website start. -->
+            <p>
+                Hello! My name is Shea McGuire and I am a Media Arts major working on my Bachelors at <abbr>BSU</abbr>. I have an Associates of the Arts degree from <abbr>ISU</abbr>.
+            </p>
+            <p>
+                I want to make videos for a living some day, whether that be videography, editing, or, <i>the best of the best</i>, a content creator of some sort. Here is the greatest video I've made so far:
+            </p> <br>
+            <p>
+                Since I an required to put audio on this page, here is a song I made forever ago.
+            </p> <br>
+            <p>
+                The things I think that I like the most in my room are: <ul>
+                    <li>My cat.</li>
+                    <li>My frickin awesome PC.</li>
+                    <li>I've got a really cool minifridge that I keep yogurt in.</li>
+                    <li>My bed is really high off the ground and really big which is quite nice.</li>
+                </ul>
+            </p>
+            <p>
+                My three favorite foods are: <ol>
+                    <li>Tacos</li>
+                    <li>Rice</li>
+                    <li>Basically anything with cream cheese (crepes, cheesecake, etc.)</li>
+                </ol>
+            </p>
+        </div>
     </body>
     <footer>
         <!-- Here is the footer to finalize my website. -->
