--- a/tags.html
+++ b/tags.html
@@ -10,14 +10,16 @@
             ol {color:blue;}
         </style>
         <!-- The heading and introduction to the page. -->
-        <header>
-            <h1>Hello and welcome to my website!</h1>
-            <h2>Feel free to click on buttons.</h2>
-            <h5><b>Shea McGuire</b> | <strong>sheamcguire@u.boisestate.edu</strong> | <button>Click!</button></h5>
-            <a href="tags.html">Tags</a>
-            <a href="nested.html">Nested</a>
-            <a href="media.html">Media</a>
-        </header>
+        <section>
+            <header>
+                <h1>Hello and welcome to my website!</h1>
+                <h2>Feel free to click on buttons.</h2>
+                <h5><b>Shea McGuire</b> | <strong>sheamcguire@u.boisestate.edu</strong> | <button>Click!</button></h5>
+                <a href="tags.html">Tags</a>
+                <a href="nested.html">Nested</a>
+                <a href="media.html">Media</a>
+            </header>
+        </section>
         <div>
             <!-- This is where the contents of the website start. -->
             <p>
@@ -25,10 +27,18 @@
             </p>
             <p>
                 I want to make videos for a living some day, whether that be videography, editing, or, <i>the best of the best</i>, a content creator of some sort. Here is the greatest video I've made so far:
-            </p> <br>
+            </p>
+            <aside>
+                <h1><b>Media on other page</b></h1>
+                <p>During reformatting the media that was here got moved to another page.</p>
+            </aside> <br>
             <p>
                 Since I an required to put audio on this page, here is a song I made forever ago.
             </p> <br>
+            <aside>
+                <h1><b>Media on other page</b></h1>
+                <p>During reformatting the media that was here got moved to another page.</p>
+            </aside> <br>
             <p>
                 The things I think that I like the most in my room are: <ul>
                     <li>My cat.</li>
