--- a/tags.html
+++ b/tags.html
@@ -29,14 +29,14 @@
                 I want to make videos for a living some day, whether that be videography, editing, or, <i>the best of the best</i>, a content creator of some sort. Here is the greatest video I've made so far:
             </p>
             <aside>
-                <h1><b>Media on other page</b></h1>
+                <summary><b>Media on other page</b></summary>
                 <p>During reformatting the media that was here got moved to another page.</p>
             </aside> <br>
             <p>
                 Since I an required to put audio on this page, here is a song I made forever ago.
             </p> <br>
             <aside>
-                <h1><b>Media on other page</b></h1>
+                <summary><b>Media on other page</b></summary>
                 <p>During reformatting the media that was here got moved to another page.</p>
             </aside> <br>
             <p>
