--- a/tags.html
+++ b/tags.html
@@ -28,17 +28,17 @@
             <p>
                 I want to make videos for a living some day, whether that be videography, editing, or, <i>the best of the best</i>, a content creator of some sort. Here is the greatest video I've made so far:
             </p>
-            <aside>
+            <details>
                 <summary><b>Media on other page</b></summary>
                 <p>During reformatting the media that was here got moved to another page.</p>
-            </aside> <br>
+            </details> <br>
             <p>
                 Since I an required to put audio on this page, here is a song I made forever ago.
             </p> <br>
-            <aside>
+            <details>
                 <summary><b>Media on other page</b></summary>
                 <p>During reformatting the media that was here got moved to another page.</p>
-            </aside> <br>
+            </details> <br>
             <p>
                 The things I think that I like the most in my room are: <ul>
                     <li>My cat.</li>
