I figured it out, summaries are for when you update multiple files at once

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <body>
         <a href="tags.html">Tags</a>
         <a href="nested.html">Nested</a>
-        <a href="media.html">Media</a>
+        <a href="media.html">Media</a> <br>
+        <p> This is the basic index page.</p>
     </body>
     <footer>
         <!-- Here is the footer to finalize my website. -->
