--- a/media.html
+++ b/media.html
@@ -7,16 +7,18 @@
         <a href="tags.html">Tags</a>
         <a href="nested.html">Nested</a>
         <a href="media.html">Media</a>
-        <audio controls>
-            <source src="mightsong.mp3" type="audio/mp3">
-        </audio> <br>
-        <img src="catonchair.jpg" alt="Me gaming with my cute cat Bandit." width="30%" height="30%">
-        <figure>
-            <video width="320" height="240" controls>
-                <source src="feelslikethegdp.mp4" type="video/mp4">
-            </video>
-            <figcaption> <a href="https://www.youtube.com/watch?v=AT2G8SRGecE"> Link to the Video on Youtube </a> </figcaption>
-        </figure> <br>
+        <div>
+            <audio controls>
+                <source src="mightsong.mp3" type="audio/mp3">
+            </audio> <br>
+            <img src="catonchair.jpg" alt="Me gaming with my cute cat Bandit." width="30%" height="30%">
+            <figure>
+                <video width="320" height="240" controls>
+                    <source src="feelslikethegdp.mp4" type="video/mp4">
+                </video>
+                <figcaption> <a href="https://www.youtube.com/watch?v=AT2G8SRGecE"> Link to the Video on Youtube </a> </figcaption>
+            </figure> <br>
+        </div>
     </body>
     <footer>
         <!-- Here is the footer to finalize my website. -->
