--- a/media.html
+++ b/media.html
@@ -4,6 +4,12 @@
         <title>Media</title>
     </head>
     <body>
+        <style>
+            div {
+                border: 5px outset pink;
+                text-align: center;
+            }
+        </style>
         <a href="tags.html">Tags</a>
         <a href="nested.html">Nested</a>
         <a href="media.html">Media</a>
