--- a/nested.html
+++ b/nested.html
@@ -4,9 +4,25 @@
         <title>Nested</title>
     </head>
     <body>
-        <a href="tags.html">Tags</a>
-        <a href="nested.html">Nested</a>
-        <a href="media.html">Media</a>
+        <div>
+            <style>
+                div {border:5px}
+            </style>
+            <h2>
+                <i>Nested Expirimental Page</i>
+            </h2>
+        </div>
+        <ul>
+            <li>
+                <b><a href="tags.html">Tags</a></b>
+            </li>
+            <li>
+                <b><a href="nested.html">Nested</a></b>
+            </li>
+            <li>
+                <b><a href="media.html">Media</a></b>
+            </li>
+        </ul>
         
     </body>
     <footer>
