--- a/nested.html
+++ b/nested.html
@@ -23,7 +23,14 @@
                 <b><a href="media.html">Media</a></b>
             </li>
         </ul>
-        
+        <div>
+            <details>
+                <summary>
+                    <b>This page is for nesting.</b>
+                </summary>
+                <p>It experiments with a variety of tags that fit with each other.</p>
+            </details>
+        </div>
     </body>
     <footer>
         <!-- Here is the footer to finalize my website. -->
