--- a/nested.html
+++ b/nested.html
@@ -6,7 +6,7 @@
     <body>
         <div>
             <style>
-                div {border:5px}
+                div {border: 5px outset blue}
             </style>
             <h2>
                 <i>Nested Expirimental Page</i>
