--- a/tags.html
+++ b/tags.html
@@ -5,9 +5,24 @@
     </head>
     <body>
         <style>
-            header {color:darkorchid;}
-            ul {color:red;}
-            ol {color:blue;}
+            header {
+                color:darkorchid;
+            }
+            ul {
+                color:red;
+            }
+            ol {
+                color:blue;
+            }
+            summary,p,footer {
+                color:darkgray;
+            }
+            div li {
+                font-size:medium;  
+            }
+            details > summary {
+                color:red!important;
+            }
         </style>
         <!-- The heading and introduction to the page. -->
         <section>
