I am willing to only push 1 file at a time if it means i do not need to summarize

--- a/tags.html
+++ b/tags.html
@@ -2,28 +2,9 @@
 <html>
     <head>
         <title>Tags</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <style>
-            header {
-                color:darkorchid;
-            }
-            ul {
-                color:red;
-            }
-            ol {
-                color:blue;
-            }
-            summary,p,footer {
-                color:darkgray;
-            }
-            div li {
-                font-size:medium;  
-            }
-            details > summary {
-                color:red!important;
-            }
-        </style>
         <!-- The heading and introduction to the page. -->
         <section>
             <header>
