--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <html>
     <head>
         <title>Shea McGuire</title>
+        <link rel="stylesheet" href="style.css">
     </head>
-    <body>
+    <body class="pseudo">
         <a href="tags.html">Tags</a>
         <a href="nested.html">Nested</a>
         <a href="media.html">Media</a> <br>
