--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <title>Shea McGuire</title>
         <link rel="stylesheet" href="style.css">
     </head>
-    <body class="pseudo">
-        <a href="tags.html">Tags</a>
+    <body>
+        <a class="pseudo" href="tags.html">Tags</a>
         <a href="nested.html">Nested</a>
         <a href="media.html">Media</a> <br>
         <p> This is the basic index page.</p>
