I actually cannot get this pseudo class to work

--- a/tags.html
+++ b/tags.html
@@ -28,7 +28,7 @@
                 <summary><b>Media on other page</b></summary>
                 <p>During reformatting the media that was here got moved to another page.</p>
             </details> <br>
-            <p>
+            <p class="pseudo">
                 Since I an required to put audio on this page, here is a song I made forever ago.
             </p> <br>
             <details>
