--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <a class="pseudo" href="tags.html">Tags</a>
+        <a href="tags.html">Tags</a>
         <a href="nested.html">Nested</a>
         <a href="media.html">Media</a> <br>
         <p> This is the basic index page.</p>
