the css sheet should be linked to everything now if this doesnt work ima be angry

--- a/media.html
+++ b/media.html
@@ -2,18 +2,13 @@
 <html>
     <head>
         <title>Media</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <style>
-            div {
-                border: 5px outset pink;
-                text-align: center;
-            }
-        </style>
         <a href="tags.html">Tags</a>
         <a href="nested.html">Nested</a>
         <a href="media.html">Media</a>
-        <div>
+        <div class="media">
             <audio controls>
                 <source src="mightsong.mp3" type="audio/mp3">
             </audio> <br>
