--- a/nested.html
+++ b/nested.html
@@ -2,12 +2,10 @@
 <html>
     <head>
         <title>Nested</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div>
-            <style>
-                div {border: 5px outset blue}
-            </style>
+        <div class="nested">
             <h2>
                 <i>Nested Expirimental Page</i>
             </h2>
