--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     </body>
     <footer>
         <!-- Here is the footer to finalize my website. -->
-        <h6>This website was made by me! ©Shea McGuire aka Timmy™</h6>
+        <h6>This website was made by me! ©Shea McGuire aka Timmy™ (putting this because my page seems to not change)</h6>
     </footer>
 </html>
