One hover started working but not the other one whyyyyy

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <a href="media.html">Media</a> <br>
         <p> This is the basic index page.</p>
     </body>
-    <footer>
+    <footer class="index">
         <!-- Here is the footer to finalize my website. -->
         <h6>This website was made by me! ©Shea McGuire aka Timmy™</h6>
     </footer>
