ig css is just never gonna do what i ask it to

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Shea McGuire</title>
         <link rel="stylesheet" href="style.css">
     </head>
-    <body>
+    <body class="box">
         <a href="tags.html">Tags</a>
         <a href="nested.html">Nested</a>
         <a href="media.html">Media</a> <br>
