Think this one will work? classes are seeming to work interestingly

--- a/media.html
+++ b/media.html
@@ -4,7 +4,7 @@
         <title>Media</title>
         <link rel="stylesheet" href="style.css">
     </head>
-    <body>
+    <body class="media">
         <a href="tags.html">Tags</a>
         <a href="nested.html">Nested</a>
         <a href="media.html">Media</a>
