It seems the issue is just that github doesn't know how to read because it all works fine on my pc

--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
         <title>Shea McGuire</title>
         <link rel="stylesheet" href="style.css">
     </head>
-    <body class="box">
-        <a href="tags.html">Tags</a>
-        <a href="nested.html">Nested</a>
-        <a href="media.html">Media</a> <br>
+    <body>
+        <div class="box">
+            <a href="tags.html">Tags</a>
+            <a href="nested.html">Nested</a>
+            <a href="media.html">Media</a> <br>
+        </div>
         <p> This is the basic index page.</p>
     </body>
     <footer class="index">
