Alright heres another multiple file update that is going to drive me slightly bonkers

--- a/tags.html
+++ b/tags.html
@@ -7,7 +7,7 @@
     <body>
         <!-- The heading and introduction to the page. -->
         <section>
-            <header>
+            <header class="sticky">
                 <h1>Hello and welcome to my website!</h1>
                 <h2>Feel free to click on buttons.</h2>
                 <h5><b>Shea McGuire</b> | <strong>sheamcguire@u.boisestate.edu</strong> | <button>Click!</button></h5>
