discovered i dont have to wait for github to do its thing, i can just view the website with the files and never deal with github till the end so here is the css assignment finished.

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div class="box">
+        <div id="box">
             <a href="tags.html">Tags</a>
             <a href="nested.html">Nested</a>
             <a href="media.html">Media</a> <br>
         </div>
-        <p> This is the basic index page.</p>
+        <p id="anim"> This is the basic index page.</p>
     </body>
     <footer class="index">
         <!-- Here is the footer to finalize my website. -->
