--- a/media.html
+++ b/media.html
@@ -4,14 +4,16 @@
         <title>Media</title>
         <link rel="stylesheet" href="style.css">
     </head>
-    <body class="media">
-        <a href="tags.html">Tags</a>
-        <a href="nested.html">Nested</a>
-        <a href="media.html">Media</a>
+    <body>
+        <header id="media">
+            <a href="tags.html">Tags</a>
+            <a href="nested.html">Nested</a>
+            <a href="media.html">Media</a>
+        </header>
         <div class="media">
             <audio controls>
                 <source src="mightsong.mp3" type="audio/mp3">
-            </audio> <br>
+             </audio> <br>
             <img src="catonchair.jpg" alt="Me gaming with my cute cat Bandit." width="30%" height="30%">
             <figure>
                 <video width="320" height="240" controls>
