Alright well that didnt work as well as id hoped but I still managed to make progress

--- a/media.html
+++ b/media.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <header id="media">
+        <header class="sticky">
             <a href="tags.html">Tags</a>
             <a href="nested.html">Nested</a>
             <a href="media.html">Media</a>
