--- a/index.html
+++ b/index.html
@@ -6,12 +6,57 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div id="box">
-            <a href="tags.html">Tags</a>
-            <a href="nested.html">Nested</a>
-            <a href="media.html">Media</a> <br>
+        <header id="box">
+            <h1>Hello and welcome to my website!</h1> <h2>Feel free to click on buttons.</h2>
+            <h5><b>Shea McGuire</b> | <strong>sheamcguire@u.boisestate.edu</strong> | <button>Click!</button></h5>
+        </header>
+        <div class="sticky">
+            <a href="tags.html">Tags</a> <a href="nested.html">Nested</a> <a href="media.html">Media</a> <br>
         </div>
         <p id="anim"> This is the basic index page.</p>
+        <div class="container">
+            <!-- This is where the contents of the website start. -->
+            <p class="pseudo">
+                Hello! My name is Shea McGuire and I am a Media Arts major working on my Bachelors at <abbr>BSU</abbr>. I have an Associates of the Arts degree from <abbr>ISU</abbr>.
+            </p>
+            <p>
+                I want to make videos for a living some day, whether that be videography, editing, or, <i>the best of the best</i>, a content creator of some sort. Here is the greatest video I've made so far:
+            </p>
+            <details>
+                <summary><b>Media on other page</b></summary> <p>During reformatting the media that was here got moved to another page.</p>
+            </details> <br>
+            <p>Since I an required to put audio on this page, here is a song I made forever ago.</p> <br>
+            <details>
+                <summary><b>Media on other page</b></summary> <p>During reformatting the media that was here got moved to another page.</p>
+            </details> <br>
+            <p>
+                The things I think that I like the most in my room are: <ul>
+                    <li>My cat.</li>
+                    <li>My frickin awesome PC.</li>
+                    <li>I've got a really cool minifridge that I keep yogurt in.</li>
+                    <li>My bed is really high off the ground and really big which is quite nice.</li>
+                </ul>
+            </p>
+            <p>
+                My three favorite foods are: <ol>
+                    <li>Tacos</li>
+                    <li>Rice</li>
+                    <li>Basically anything with cream cheese (crepes, cheesecake, etc.)</li>
+                </ol>
+            </p>
+        </div>
+        <div class="media">
+            <audio controls>
+                <source src="mightsong.mp3" type="audio/mp3">
+             </audio> <br>
+            <img src="catonchair.jpg" alt="Me gaming with my cute cat Bandit." width="30%" height="30%">
+            <figure>
+                <video width="320" height="240" controls>
+                    <source src="feelslikethegdp.mp4" type="video/mp4">
+                </video>
+                <figcaption> <a href="https://www.youtube.com/watch?v=AT2G8SRGecE"> Link to the Video on Youtube </a> </figcaption>
+            </figure> <br>
+        </div>
     </body>
     <footer class="index">
         <!-- Here is the footer to finalize my website. -->
