--- a/index.html
+++ b/index.html
@@ -1,21 +1,30 @@
-<!-- All the meta tags for use in GitHub. -->
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Shea McGuire</title>
+        <title>Home</title>
         <link rel="stylesheet" href="style.css">
     </head>
+    <body>
+        <ul class="navbar">
+            <li class="navbar"><a class="active" href="index.html">Home</a></li>
+            <li class="navbar"><a href="film.html">Films</a></li>
+            <li class="navbar"><a href="equipment.html">Equipment</a></li>
+            <li class="navbar"><a href="contact.html">Contact</a></li>
+        </ul>
+    </body>
+</html>
+    <!--
     <body>
         <header id="box">
             <h1>Hello and welcome to my website!</h1> <h2>Feel free to click on buttons.</h2>
             <h5><b>Shea McGuire</b> | <strong>sheamcguire@u.boisestate.edu</strong> | <button>Click!</button></h5>
         </header>
         <div class="sticky">
-            <a href="tags.html">Tags</a> <a href="nested.html">Nested</a> <a href="media.html">Media</a> <br>
+             <a href="nested.html">Nested</a> <a href="media.html">Media</a> <br>
         </div>
         <p id="anim"> This is the basic index page.</p>
         <div class="container">
-            <!-- This is where the contents of the website start. -->
+             This is where the contents of the website start. 
             <p class="pseudo">
                 Hello! My name is Shea McGuire and I am a Media Arts major working on my Bachelors at <abbr>BSU</abbr>. I have an Associates of the Arts degree from <abbr>ISU</abbr>.
             </p>
@@ -57,9 +66,8 @@
                 <figcaption> <a href="https://www.youtube.com/watch?v=AT2G8SRGecE"> Link to the Video on Youtube </a> </figcaption>
             </figure> <br>
         </div>
-    </body>
+    </body> 
     <footer class="index">
-        <!-- Here is the footer to finalize my website. -->
+       
         <h6>This website was made by me! ©Shea McGuire aka Timmy™</h6>
-    </footer>
-</html>
+    </footer> -->
