main page finished

--- a/index.html
+++ b/index.html
@@ -4,13 +4,29 @@
         <title>Home</title>
         <link rel="stylesheet" href="style.css">
     </head>
-    <body>
+    <body class="home">
         <ul class="navbar">
             <li class="navbar"><a class="active" href="index.html">Home</a></li>
             <li class="navbar"><a href="film.html">Films</a></li>
             <li class="navbar"><a href="equipment.html">Equipment</a></li>
             <li class="navbar"><a href="contact.html">Contact</a></li>
         </ul>
+        <div class="home">
+            <h1 class="home">Welcome to my website!</h1>
+            <h2 class="home">Feel free to click on things.</h2>
+        </div>
+        <div>
+            <p class="home"> 
+                My name is Shea, and I am a video editor who does some videography in my freetime.
+                This website is going to explore some of the things I have made and the tools I use to make them.
+                Here is a quick synopsis me: I am someone who loves creativity and making cool things, but completely lacks creativity.
+                Working with simple shapes and colors is pretty appealing because of that, but I also think the highlighter vibes of pink, yellow,
+                and cyan represent me pretty well. In my freetime I mostly play video games, but I like to try making videos about those video games.
+                I am working on becoming a post production expert by practicing my editing, vfx, and graphic design. Graphic design is a skill
+                that I really lack but am working on making it better. Some other things I like are writing, cooking, and swimming.
+            </p>
+            <img class="home" src="personal-photo.png" alt="Picture of Me">
+        </div>
     </body>
 </html>
     <!--
