--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Home</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
     </head>
     <body class="home">
         <ul class="navbar">
