films page formatted

--- a/film.html
+++ b/film.html
@@ -16,9 +16,14 @@
             <h1 class="title">Films and Videos</h1>
             <h2 class="title">Some of my video production projects.</h2>
         </div>
-        <span class="video1">
-            <iframe width="420" height="315" src="https://youtu.be/3jvLTX192uU"></iframe>
-        </span>
+        <div class="video1">
+            <iframe class="video1" width="500" height="281" src="https://youtube.com/embed/WdGYJYjuVyQ" ></iframe>
+            <p class="video1">
+                This video is a gaming one I made to practice youtube gaming content. I'm not a very entertaining person here 
+                but there was an attempt. I also practice my photoshop for the thumbnail. Pretty simple and unentertaining, 
+                but practice is practice.
+            </p>
+        </div>
     </body>
 </html>
 <!--
