Finished film page

--- a/film.html
+++ b/film.html
@@ -17,12 +17,36 @@
             <h2 class="title">Some of my video production projects.</h2>
         </div>
         <div class="video1">
-            <iframe class="video1" width="500" height="281" src="https://youtube.com/embed/WdGYJYjuVyQ" ></iframe>
+            <iframe class="video1" width="500" height="281" src="https://youtube.com/embed/WdGYJYjuVyQ"></iframe>
             <p class="video1">
                 This video is a gaming one I made to practice youtube gaming content. I'm not a very entertaining person here 
                 but there was an attempt. I also practice my photoshop for the thumbnail. Pretty simple and unentertaining, 
                 but practice is practice.
             </p>
+        </div>
+        <div class="video2">
+            <p class="video2">
+                Here is a video I edited for a production class, with the focus being on editing fluidly in a PKG style, using sots,
+                some clean quick shots, and good continuity. This one is pretty well edited, though the videography isn't very good,
+                and the audio and video required some heavy clean up in post.
+            </p>
+            <iframe class="video2" width="500" height="281" src="https://youtube.com/embed/NBg1B_I6jIY"></iframe>
+        </div>
+        <div class="video3">
+            <p class="video3">
+                Videography is a pretty weak point of mine, and this project focused on that. A classmate and I worked here to take
+                good film of nearby outdoor locations and make a video explaining them all. Here, the editing is rough and rushed,
+                since the focus is on videography.
+            </p>
+            <iframe class="video3" width="500" height="281" src="https://youtube.com/embed/3jvLTX192uU"></iframe>
+        </div>
+        <div class="video4">
+            <p class="video4">
+                My greatest creation ever is unironically a parody of Eminem's "Without Me". Some friends and I made this for our
+                econ class. I didn't do much of the writing but I was one of the main videographers for our group and I did all
+                of the editng and vfx. I personally love it and think that for editing it in a day it is a masterpiece.
+            </p>
+            <iframe class="video4" width="500" height="281" src="https://youtube.com/embed/AT2G8SRGecE"></iframe>
         </div>
     </body>
 </html>
