finished the equipment page

--- a/equipment.html
+++ b/equipment.html
@@ -5,13 +5,49 @@
         <link rel="stylesheet" href="style.css">
         <link rel="icon" type="image/x-icon" href="favicon.ico">
     </head>
-    <body>
+    <body class="equipment">
         <ul class="navbar">
             <li class="navbar"><a href="index.html">Home</a></li>
             <li class="navbar"><a href="film.html">Films</a></li>
             <li class="navbar"><a class="active" href="equipment.html">Equipment</a></li>
             <li class="navbar"><a href="contact.html">Contact</a></li>
         </ul>
+        <div class="title">
+            <h1 class="equip">Equipment and Software</h1>
+            <h2 class="equip">The tools I use to make my videos.</h2>
+        </div>
+        <div class="camera">
+            <img class="camera" src="camera.jpg" alt="Camcorder and external mic.">
+            <p class="camera">
+                For filming and videography, my main tool is a digital camera with an external microphone. It makes a great high-rez
+                quick use camera. The mic is high quality, and in combination with a camera phone I am able to get a lot
+                of high quality creative shots easily. 
+            </p>
+        </div>
+        <div class="computer">
+            <img class="computer" src="computer.jpg" alt="Custom built PC.">
+            <p class="computer">
+                I built this computer a while back for a gaming and work set up, and it currently serves as my main tool for
+                video editing and post-production work. It has a 1050ti as the main graphics card, which works pretty well whenever
+                rendering effects in premiere or after effects.
+            </p>
+        </div>
+        <div class="creative">
+            <img class="creative" src="creative.png" alt="Custom built PC.">
+            <p class="creative">
+                The main editing software that I use is adobe premiere. I get it pretty cheap because of the student discount, and it
+                is a really useful software for production. I also utilize the rest of the adobe suite in a lot of the things I do.
+                The graphics for this website were made in photoshop, and a I like to do most effects in after effects.
+            </p>
+        </div>
+        <div class="obs">
+            <img class="obs" src="obs.png" alt="Custom built PC.">
+            <p class="obs">
+                When I want to practice gaming related or youtube style content, my main tool is OBS or Streamlabs (which is made by OBS).
+                I can use it to record videos myself, or to screen record anything else happening on my monitors that I think could be
+                assets or fun things to turn into a cool video project.
+            </p>
+        </div>
     </body>
 </html>
 <!--
