--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <p class="home"> 
                 My name is Shea, and I am a video editor who does some videography in my freetime.
                 This website is going to explore some of the things I have made and the tools I use to make them.
-                Here is a quick synopsis me: I am someone who loves creativity and making cool things, but completely lacks creativity.
+                Here is a quick of synopsis me: I am someone who loves creativity and making cool things, but completely lacks creativity.
                 Working with simple shapes and colors is pretty appealing because of that, but I also think the highlighter vibes of pink, yellow,
                 and cyan represent me pretty well. In my freetime I mostly play video games, but I like to try making videos about those video games.
                 I am working on becoming a post production expert by practicing my editing, vfx, and graphic design. Graphic design is a skill
